--- a/01.HTML5/06.연습문제.htm
+++ b/01.HTML5/06.연습문제.htm
@@ -6,6 +6,7 @@
     <title>연습문제</title>
 </head>
 <body>
+    <!-- table>(tr>th*7)+(tr>td*7)*3 -->
     <table border="1">
         <caption><b>머행블로그 식단표</b></caption>
         <thead>
