--- a/01.HTML5/05.표관련태그.html
+++ b/01.HTML5/05.표관련태그.html
@@ -16,12 +16,121 @@
     -->
     <h1>기본적인 표 만들기</h1>
 
-    <table>
+    <table border="1">
+        <caption>[표1] 웹 브라우저의 종류</caption>
         <tr>
             <th>브라우저명</th>
             <th>제조사</th>
             <th>홈페이지</th>
         </tr>
+        <tr>
+            <td>Edge</td>
+            <td>Microsoft</td>
+            <td>https://microsoft.com</td>
+        </tr>
+        <tr>
+            <td>Chrome</td>
+            <td>google</td>
+            <td>https://chrome.com</td>
+        </tr>
+        <tr>
+            <td>Safari</td>
+            <td>Apple</td>
+            <td>https://apple.com</td>
+        </tr>
     </table>
+    <br>
+    <br><br>
+    <hr>
+    <h3>표의 행과 열을 합치는 속성</h3>
+    <!-- 
+        셀(th,td) 태그의 속성을 이용하여 행 또는 열을 합칠 수 있음
+        * colspan="n": n개의 열 합치기
+        * rowspan="n": n개의 행 합치기
+    -->
+    <br><br>
+    <table border="1">
+        <caption><b>이&emsp;력&emsp;서</b></caption>
+        <tr>
+           <td colspan="2" rowspan="2" width="100" height="100">사진</td>
+           <td width="50">이름</td>
+           <td width="200">남궁용진</td> 
+        </tr>
+        <tr>
+            <td>연락처</td>
+            <td>010-9974-8286</td>
+        </tr>
+        <tr>
+            <td width="70">주소</td>
+            <td colspan="3">경기도 안산시 상록구 석호로 413</td>
+        </tr>
+        <tr>
+            <td height="100">자기소개</td>
+            <td colspan="3">안녕하세요 </td>
+        </tr>
+    </table>
+    <br><br>
+    <hr>
+    <h1>테이블내에 구조 나누기</h1>
+    <!-- table>(thead>tr>th*3)+tbody>((tr>td*3)*3)+(tfoot>tr>td*2)  -->
+    <table border="1">
+        <thead>
+            <tr>
+                <th>이름</th>
+                <th>나이</th>
+                <th>주소</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>남궁용진</td>
+                <td>20</td>
+                <td>경기도 안산시</td>
+            </tr>
+            <tr>
+                <td>강하늘</td>
+                <td>25</td>
+                <td>서울특별시 영등포구</td>
+            </tr>
+            <tr>
+                <td>이하늘</td>
+                <td>23</td>
+                <td>경기도 과천시</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="2">총인원</th>
+                <td>3명</td>
+            </tr>
+        </tfoot>
+    </table>
+    <br><br>
+    <hr>
+
+    <table>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
