--- a/01.HTML5/07.이미지and멀티미디어태그.html
+++ b/01.HTML5/07.이미지and멀티미디어태그.html
@@ -22,5 +22,42 @@
     <img src="resources/img/쥐.png" alt="쥐(찍찍)">
     <br>
     <img src="resources/img/생쥐.png" alt="쥐(찍찍)">
+
+    <h3>* width와 height 속성</h3>
+    <p>
+        이미지의 가로, 세로 길이 조정 가능<br>
+        고정길이(px), 가변길이(%)로 지정 (기본값은 px단위)
+    </p>
+
+    <h4>고정길이단위(px)=기본값: 화면사이즈가 조정 되어도 이미지 크기는 변경되지 않음</h4>
+
+    <img src="resources/img/tiger.png" width="150" height="200">
+    <img src="resources/img/쥐.png" width="150" height="100">
+    <img src="resources/img/rabit.png" width="150" height="200">
+    <br><br>
+
+    <h4>가변길이단위(%): 화면사이즈 또는 부모요소사이즈에 따라 이미지의 크기도 같이 변동</h4>
+
+    <img src="resources/img/tiger.png" width="23%" height="200">
+    <img src="resources/img/쥐.png" width="23%" height="100">
+    <img src="resources/img/rabit.png" width="23%" height="200">
+    <br><br><hr>
+    <h1>미디어 관련 태그</h1>
+    <h3>오디오 관련 태그</h3>
+    <!-- 
+        <audio srt="" [controls autoplay loop] />
+
+        src: 오디오 경로
+        controls: 재생도구 출력 여부
+        autoplay: 자동 재싱 여부 지정
+    -->
+    <audio src="resources/audio/bgsound.mp3" controls autoplay></audio>
+    
+    <h3>비디오 관련 태그</h3>
+    <!-- 
+        <video src="" [controls autoplay loop width = "" height = "" poster ="썸네일 이미지 경로"]
+    -->
+    <video src="resources/video/video1.mp4" controls width="700" poster="resources/img/쥐.png"></video>
+
 </body>
 </html>
