--- a/02.CSS3/13.배치관련스타일.html
+++ b/02.CSS3/13.배치관련스타일.html
@@ -30,5 +30,22 @@
     <br><br><br><br><br><br><br><br><br><br><br><br><br><hr>
     <h3>visibility: 특정 요소를 보이거나 보이지 않게 하는 스타일</h3>
 
-</body>
-</html>
+    <div class="vis-test ye" >요소1</div>
+    <!-- <div class="vis-test yg" style="visibility: hidden;">요소2</div> -->
+    <div class="vis-test yg" style="display: none;">요소2</div>
+    <div class="vis-test sky">요소3</div>
+    <b>visibility: hidden은 공간은 차지하지만, display:none은 공간을 차지하지 않음</b>
+    <hr>
+
+    <h3>float</h3>
+    <p>페이지 내의 요소들을 화면으로부터 띄어서 왼쪽 또는 오른쪽으로 배치하는 속성</p>
+
+    <div class="float-test">요소1</div>
+    <div class="float-test">요소2</div>
+    <div class="float-test">요소3</div>
+    <div class="float-test">요소4</div>
+    <div class="float-test">요소5</div>
+
+    <p style="clear:both">float으로 쌓은것을 해제</p> 
+
+</body></html>
